--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/olap4j-0.9.8.jar"/>
-	<classpathentry kind="lib" path="lib/mondrian.jar"/>
 	<classpathentry kind="lib" path="lib/eigenbase-properties.jar"/>
 	<classpathentry kind="lib" path="lib/eigenbase-resgen.jar"/>
 	<classpathentry kind="lib" path="lib/eigenbase-xom.jar"/>
@@ -18,5 +16,7 @@
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
 	<classpathentry kind="lib" path="lib/mdx4j-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="lib/mondrian-3.3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/olap4j-1.0.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
